--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,43 +9,41 @@
 
     <Button
         android:id="@+id/open_cameraLive"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Live Recognition"
-        android:gravity="center"
         android:layout_marginStart="132dp"
+        android:layout_marginTop="156dp"
         android:layout_marginEnd="132dp"
-        android:layout_marginTop="196dp"
+        android:gravity="center"
+        android:text="Live Recognition"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
-        android:text="OR"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="41dp"
+        android:layout_marginStart="181dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="182dp"
         android:gravity="center"
+        android:text="OR"
         android:textColor="#000000"
-        android:layout_marginEnd="155dp"
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="71dp"
-        android:layout_marginBottom="71dp"
-        app:layout_constraintBottom_toTopOf="@+id/open_cameraClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/open_cameraLive" />
 
     <Button
         android:id="@+id/open_cameraClick"
-        android:text="Click Image\n For Recognition"
-        android:layout_width="0dp"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="132dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="131dp"
-        android:layout_marginBottom="233dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="132dp"
+        android:gravity="center"
+        android:text="Click Image\n For Recognition"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
